<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="image_description_newsImage">News Image\n</string>
    <string name="published_at">Published at</string>
    <string name="author">Penulis</string>
    <string name="description">Deskripsi</string>
    <string name="lebih_lanjut">Lebih Lanjut</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_news">Berita</string>
    <string name="image_description_newsimage">News Image</string>
    <string name="news">Berita</string>
</resources>